<resources>
    <string name="app_name">Budget Buddy</string>
    <string name="title_registrar_gasto">Registrar gasto</string>
    <string name="hint_monto">Monto</string>
    <string name="hint_comentario">Comentario</string>
    <string name="btn_registrar">Registrar</string>
    <string name="error_category_not_selected">Debe seleccionar una categoría para el gasto</string>
    <string name="error_saving_expense">Error al registrar gasto</string>
    <string name="error_message_title">Error</string>
    <string name="saving_expense_ok">Gasto registrado</string>
    <string name="mensaje_guardando">Guardando</string>
    <string name="hint_fecha">Fecha (dd/mm/yyyy)</string>
    <string name="action_list_expenses">Listar</string>
    <string name="error_amount_empty">Debe ingresar un monto</string>
    <string name="error_amount_invalid">El monto ingresado es inválido</string>
    <string name="text_view_message">Ver mensaje</string>
    <string-array name="prompts_categoria">
        <item>(Cargando...)</item>
    </string-array>
</resources>
